--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,57 +1,83 @@
 body {
-    overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 /* ================MENU================== */
 
-#menu li>a {
-    font-size: 18px;
-    font-weight: bold;
+#menu li > a {
+  font-size: 18px;
+  font-weight: bold;
 }
 
-#menu form>button {
-    font-size: 18px;
-    font-weight: bold;
+#menu form > button {
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .navbar-collapse {
-    flex-grow: 0;
+  flex-grow: 0;
 }
 
 .navbar-brand {
-    width: 15%;
-    height: 7%;
+  width: 15%;
+  height: 7%;
 }
 
 ul#nav_item li a {
-    position: relative;
-    font-weight: bold;
-    color: white;
-    margin: 0px 15px;
+  position: relative;
+  font-weight: bold;
+  color: white;
+  margin: 0px 15px;
 }
 
 ul#nav_item li a:after {
-    position: absolute;
-    bottom: 7px;
-    left: 0px;
-    width: 100%;
-    height: 4px;
-    background-color: white;
-    content: "";
-    opacity: 0;
-    transition: opacity 0.3s ease 0s, transform 0.3s ease 0s;
-    transform: translateY(20px);
+  position: absolute;
+  bottom: 7px;
+  left: 0px;
+  width: 100%;
+  height: 4px;
+  background-color: white;
+  content: "";
+  opacity: 0;
+  transition: opacity 0.3s ease 0s, transform 0.3s ease 0s;
+  transform: translateY(20px);
 }
 
 ul#nav_item li a:hover:after {
-    opacity: 1;
-    transform: translateY(15px);
+  opacity: 1;
+  transform: translateY(15px);
 }
 
 /* ================FOOTER================== */
 
 .container {
-    margin: 0;
-    max-width: 100%;
-    padding: 0;
+  margin: 0;
+  max-width: 100%;
+  padding: 0;
+}
+
+.cards-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 70px 0;
+}
+
+.container-category {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  padding-top: 10px;
+}
+
+.check-container {
+  display: flex;
+  gap: 30px;
+  padding-left: 15px;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 150px;
 }
