--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,11 @@
-    body {
-        overflow-x: hidden;
+.html {
+    height: 100%;
+}
+    .body {
+        display: flex;
+        flex-direction: column;
+        min-height: 100%;
+        min-height: 100vh;
     }
     /* ================MENU================== */
     
@@ -80,8 +86,8 @@
         text-align: justify;
     }
     /* ================FOOTER================== */
-    
-    .container {
+
+    .container1{
         margin: 0;
         max-width: 100%;
         padding: 0;
@@ -118,7 +124,7 @@
     }
     
     tr {
-        border: 1px solid black;
+        border: 1px solid rgb(0, 0, 0);
     }
     
     td {
