--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,146 +1,176 @@
 .html {
     height: 100%;
 }
-    .body {
-        display: flex;
-        flex-direction: column;
-        min-height: 100%;
-        min-height: 100vh;
-    }
-    /* ================MENU================== */
-    
-    #menu li>a {
-        font-size: 18px;
-        font-weight: bold;
-    }
-    
-    #menu form>button {
-        font-size: 18px;
-        font-weight: bold;
-    }
-    
-    .navbar-collapse {
-        flex-grow: 0;
-    }
-    
-    .navbar-brand {
-        width: 15%;
-        height: 7%;
-    }
-    
-    ul#nav_item li a {
-        position: relative;
-        font-weight: bold;
-        color: white;
-        margin: 0px 15px;
-    }
-    
-    ul#nav_item li a:after {
-        position: absolute;
-        bottom: 7px;
-        left: 0px;
-        width: 100%;
-        height: 4px;
-        background-color: white;
-        content: "";
-        opacity: 0;
-        transition: opacity 0.3s ease 0s, transform 0.3s ease 0s;
-        transform: translateY(20px);
-    }
-    
-    ul#nav_item li a:hover:after {
-        opacity: 1;
-        transform: translateY(15px);
-    }
-    
-    .btn-danger {
-        background-color: #DB0068;
-    }
-    /* ================CONTACT PAGE================== */
-    
-    .icon {
-        font-size: 7rem;
-        color: #DB0068;
-    }
-    
-    .form-label {
-        font-size: 1.2rem;
-    }
-    /* ================DETAILS PAGE================== */
-    
-    .card-img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-bottom-right-radius: 0px;
-    }
-    
-    .card h3 {
-        text-transform: uppercase;
-        color: rgb(177, 177, 177);
-        font-size: .8rem;
-    }
-    
-    .card p {
-        line-height: 1.4rem;
-        text-align: justify;
-    }
-    /* ================FOOTER================== */
 
-    .container1{
-        margin: 0;
-        max-width: 100%;
-        padding: 0;
-    }
-    
-    .cards-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 70px;
-        padding: 70px 0;
-    }
-    
-    .container-category {
-        display: flex;
-        justify-content: space-around;
-        width: 100%;
-        padding-top: 10px;
-    }
-    
-    .check-container {
-        display: flex;
-        gap: 30px;
-        padding-left: 15px;
-    }
-    
-    .card-img-top {
-        width: 100%;
-        height: 150px;
-    }
-    
-    .alto-fila {
-        height: 30px;
-    }
-    
-    tr {
-        border: 1px solid rgb(0, 0, 0);
-    }
-    
-    td {
-        border: 1px solid black;
-    }
+.body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    min-height: 100vh;
+}
 
-    /*   
+/* ================MENU================== */
+
+#menu li>a {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+#menu form>button {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.navbar-collapse {
+    flex-grow: 0;
+}
+
+.navbar-brand {
+    width: 15%;
+    height: 7%;
+}
+
+ul#nav_item li a {
+    position: relative;
+    font-weight: bold;
+    color: white;
+    margin: 0px 15px;
+}
+
+ul#nav_item li a:after {
+    position: absolute;
+    bottom: 7px;
+    left: 0px;
+    width: 100%;
+    height: 4px;
+    background-color: white;
+    content: "";
+    opacity: 0;
+    transition: opacity 0.3s ease 0s, transform 0.3s ease 0s;
+    transform: translateY(20px);
+}
+
+ul#nav_item li a:hover:after {
+    opacity: 1;
+    transform: translateY(15px);
+}
+
+.btn-danger {
+    background-color: #DB0068;
+}
+
+/* ================CONTACT PAGE================== */
+
+.icon {
+    font-size: 7rem;
+    color: #DB0068;
+}
+
+.form-label {
+    font-size: 1.2rem;
+}
+
+/* ================DETAILS PAGE================== */
+
+.card-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-bottom-right-radius: 0px;
+}
+
+.card h3 {
+    text-transform: uppercase;
+    color: rgb(177, 177, 177);
+    font-size: .8rem;
+}
+
+.card p {
+    line-height: 1.4rem;
+    text-align: justify;
+}
+
+/* ================FOOTER================== */
+
+.container1 {
+    margin: 0;
+    max-width: 100%;
+    padding: 0;
+}
+
+.cards-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 70px;
+    padding: 70px 0;
+}
+
+.container-category {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding-top: 10px;
+}
+
+.check-container {
+    display: flex;
+    gap: 30px;
+    padding-left: 15px;
+}
+
+.card-img-top {
+    width: 100%;
+    height: 150px;
+}
+
+.alto-fila {
+    height: 30px;
+}
+
+tr {
+    border: 1px solid rgb(0, 0, 0);
+}
+
+td {
+    border: 1px solid black;
+}
+
+/*   
     CUSTOM CSS PAGE 1
     */
 
-    .card-text {
-  max-height: 100px;
-  overflow-y: auto;
+.card-text {
+    max-height: 100px;
+    overflow-y: auto;
 }
 
 .card img {
-  height: 200px; /* altura fija */
-  object-fit: cover; /* para que la imagen se ajuste al tamaño del contenedor */
+    height: 200px;
+    /* altura fija */
+    object-fit: cover;
+    /* para que la imagen se ajuste al tamaño del contenedor */
+}
+
+
+
+/* Carousel Home*/
+
+.img_event1 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/eventos_ejecutivos.jpg") no-repeat center center/cover;
+}
+
+
+.img_event2 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/eventos_para_bodas.jpg") no-repeat center center/cover;
+}
+
+.img_event3 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/eventos_musicales.jpg") no-repeat center center/cover;
 }
