--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,10 +2,24 @@
     height: 100%;
 }
 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+ }
+ 
 .body {
     display: flex;
     flex-direction: column;
     min-height: 100%;
+    min-height: 100vh;
+
+    background: #eee;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;  
     min-height: 100vh;
 }
 
@@ -145,12 +159,55 @@ td {
     overflow-y: auto;
 }
 
-.card img {
-    height: 200px;
-    /* altura fija */
-    object-fit: cover;
-    /* para que la imagen se ajuste al tamaño del contenedor */
+
+.icon_detail{
+    font-size: xx-large;
 }
+
+/* Swiper Css */
+
+body {
+    width: 100%;
+
+    height: 100%;
+  }
+
+  .contianer{
+    width: 100%;
+
+    padding: 10px 40px;    
+  }
+
+  .swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+/* Details Card */
+
+.card_details {
+    height: 100%;
+    width: 100%;
+    background: center center/cover;
+    background-size: center center/cover;
+}
+
 
 
 
@@ -174,3 +231,55 @@ td {
     height: 200px;
     background: url("../assets/images/eventos_musicales.jpg") no-repeat center center/cover;
 }
+
+.body{
+    overflow: hidden !important; 
+}
+.container{
+    width: 90% !important;
+  
+    padding: 10px 40px !important;
+  }
+  .container .swiper-container{
+    width: 100% !important;
+    height: 100% !important;
+  }
+  .container .swiper-slide {
+    position: relative;
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    border-radius: 15px;
+    text-align: start;
+    box-shadow: 0px 4px 4px rgba(196, 196, 196, 0.25);
+   
+  }
+  .container .swiper-slide img{
+     display: block;
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
+  
+  }
+  .container .swiper-slide .card-description{
+      padding:1rem 1rem;
+  }
+  .container .swiper-slide .card-title,.container .swiper-slide .card-text{
+     margin-bottom: .5rem;
+  }
+  .container .swiper-slide .card-link{
+     text-align: center;
+    
+  }
+  .container .swiper-slide .card-link a{
+      text-decoration: none;
+      color: #1d6ce2;
+  }
+  .swiper-button-next{
+      right: 26px !important;
+  }
+  .swiper-button-prev{
+      left: 26px !important;
+  }
