anexar imagenes para los slider
carga de imagenes para los diferentes slider de cada pagina, con su estilo de CSS

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -174,3 +174,80 @@ td {
     height: 200px;
     background: url("../assets/images/eventos_musicales.jpg") no-repeat center center/cover;
 }
+
+.img_event4 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/contactenos_1.jpg") no-repeat center center/cover;
+}
+
+
+.img_event5 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/contactenos_2.jpg") no-repeat center center/cover;
+}
+
+.img_event6 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/contactenos_3.jpg") no-repeat center center/cover;
+}
+
+
+.img_event7 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/detalles_eventos_1.jpg") no-repeat center center/cover;
+}
+
+
+.img_event8 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/detalles_eventos_2.jpg") no-repeat center center/cover;
+}
+
+.img_event9 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/detalles_eventos_3.jpg") no-repeat center center/cover;
+}
+
+.img_event10 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/eventos_stats_1.jpg") no-repeat center center/cover;
+}
+
+
+.img_event11 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/eventos_stats_2.jpg") no-repeat center center/cover;
+}
+
+.img_event12 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/eventos_stats_3.jpg") no-repeat center center/cover;
+}
+
+.img_event13 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/home_evento_1.jpg") no-repeat center center/cover;
+}
+
+
+.img_event14 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/home_evento_2.jpg") no-repeat center center/cover;
+}
+
+.img_event15 {
+    width: 100%;
+    height: 200px;
+    background: url("../assets/images/home_evento_3.jpg") no-repeat center center/cover;
+}
