--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,6 @@
     box-sizing: border-box;
 }
 
-
 .background-color {
     background: #136a8a;
     /* fallback for old browsers */
@@ -16,9 +15,7 @@
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #267871, #136a8a);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
 }
-
 
 body {
     display: flex;
@@ -27,13 +24,12 @@ body {
     min-height: 100vh;
     background: #136a8a;
     margin: 0;
-  margin-bottom: 40px;
+    margin-bottom: 40px;
     /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #267871, #136a8a);
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #267871, #136a8a);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
 }
 
 footer {
@@ -42,7 +38,8 @@ footer {
     bottom: 0;
     width: 100%;
     color: white;
-  }
+}
+
 
 /* ================MENU================== */
 
@@ -94,6 +91,7 @@ ul#nav_item li a:hover:after {
     background-color: #DB0068;
 }
 
+
 /* ================CONTACT PAGE================== */
 
 .icon {
@@ -108,6 +106,7 @@ ul#nav_item li a:hover:after {
 label {
     color: white;
 }
+
 
 /* ================DETAILS PAGE================== */
 
@@ -130,13 +129,25 @@ label {
     text-align: justify;
 }
 
+
 /* ================FOOTER================== */
 
-.container1 {
-    margin: 0;
-    max-width: 100%;
-    padding: 0;
+footer {
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    box-shadow: 0px -3px 10px rgba(0, 0, 0, 0.3);
 }
+
+.social-media a:hover {
+    transform: scale(1.2);
+    transition: all 0.3s ease;
+}
+
+footer P {
+    color: #000;
+}
+
+
+/* ================END FOOTER================== */
 
 .cards-container {
     display: flex;
@@ -176,6 +187,7 @@ td {
     border: 1px solid black;
 }
 
+
 /*   
     CUSTOM CSS PAGE 1
     */
@@ -201,6 +213,7 @@ li.list-group-item {
     font-size: x-large;
 }
 
+
 /* Details Card */
 
 .card_details {
@@ -210,6 +223,7 @@ li.list-group-item {
     background-size: center center/cover;
 }
 
+
 /* Carousel Home*/
 
 .img_event1 {
@@ -217,7 +231,6 @@ li.list-group-item {
     height: 150px;
     background: url("../assets/images/eventos_ejecutivos.jpg") no-repeat center center/cover;
 }
-
 
 .img_event2 {
     width: 100%;
