--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -110,13 +110,6 @@ label {
 
 /* ================DETAILS PAGE================== */
 
-.card{
-    width: 18rem;
-}
-
-
-
-
 .card-img {
     width: 100%;
     height: 100%;
@@ -155,15 +148,6 @@ footer P {
 
 
 /* ================END FOOTER================== */
-
-.cards-container--upComingEvets {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 70px;
-    padding: 70px 0;
-}
-
 
 .cards-container {
     display: flex;
@@ -259,6 +243,8 @@ li.list-group-item {
     height: 150px;
     background: url("../assets/images/eventos_musicales.jpg") no-repeat center center/cover;
 }
+
+/* PAST AND UPCOMING EVENTS */
 
 .card_events {
     width: 400px;
